<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.icuxika</groupId>
    <artifactId>JavaFX-Package-Sample</artifactId>
    <version>1.0.3</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <javafx.version>25</javafx.version>
        <moduleName>sample</moduleName>
        <mainClass>com.icuxika.Launcher</mainClass>

        <application.icon>${project.basedir}/src/main/resources/application.ico</application.icon>
        <application.package.stdout.encoding>-J-Dsun.stdout.encoding=UTF-8</application.package.stdout.encoding>
        <application.package.stderr.encoding>-J-Dsun.stderr.encoding=UTF-8</application.package.stderr.encoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>jfx-incubator-richtext</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fluentui-pack</artifactId>
            <version>12.4.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <archive>
                                <manifest>
                                    <mainClass>${mainClass}</mainClass>
                                    <addClasspath>true</addClasspath>
                                </manifest>
                            </archive>
                            <excludes>
                                <exclude>module-info.class</exclude>
                            </excludes>
                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>image</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <workingDirectory>${project.basedir}</workingDirectory>
                                    <arguments>
                                        <argument>${application.package.stdout.encoding}</argument>
                                        <argument>${application.package.stderr.encoding}</argument>
                                        <argument>-n</argument>
                                        <argument>JavaFXSample</argument>
                                        <argument>-t</argument>
                                        <argument>app-image</argument>
                                        <argument>-i</argument>
                                        <argument>
                                            ${project.build.directory}/jars
                                        </argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.artifactId}-${project.version}.jar</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}/buildImage</argument>
                                        <argument>--icon</argument>
                                        <argument>${application.icon}</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--java-options</argument>
                                        <argument>-XX:+PrintCommandLineFlags</argument>
                                        <argument>--java-options</argument>
                                        <argument>-XX:+UseZGC</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Dprism.allowhidpi=true</argument>
                                        <argument>--java-options</argument>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-launcher</argument>
                                        <argument>AppUpdateTool=launcher/AppUpdateTool.properties</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>modular</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>image</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <workingDirectory>${project.basedir}</workingDirectory>
                                    <arguments>
                                        <argument>${application.package.stdout.encoding}</argument>
                                        <argument>${application.package.stderr.encoding}</argument>
                                        <argument>-n</argument>
                                        <argument>JavaFXSample</argument>
                                        <argument>-t</argument>
                                        <argument>app-image</argument>
                                        <argument>-p</argument>
                                        <argument>
                                            ${project.build.directory}/jars
                                        </argument>
                                        <argument>--add-modules</argument>
                                        <argument>
                                            MaterialFX,com.google.gson,java.base,org.kordamp.ikonli.fluentui,org.kordamp.ikonli.javafx,org.slf4j
                                        </argument>
                                        <argument>-m</argument>
                                        <argument>${moduleName}/${mainClass}</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}/buildImage</argument>
                                        <argument>--icon</argument>
                                        <argument>${application.icon}</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--java-options</argument>
                                        <argument>-XX:+PrintCommandLineFlags</argument>
                                        <argument>--java-options</argument>
                                        <argument>-XX:+UseZGC</argument>
                                        <argument>--java-options</argument>
                                        <argument>-Dprism.allowhidpi=true</argument>
                                        <argument>--java-options</argument>
                                        <argument>--enable-native-access=${moduleName}</argument>
                                        <argument>--add-launcher</argument>
                                        <argument>AppUpdateTool=launcher/AppUpdateTool-Modular.properties</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--compress zip-9</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--no-header-files</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--no-man-pages</argument>
                                        <argument>--jlink-options</argument>
                                        <argument>--strip-debug</argument>
                                        <argument>--verbose</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jni</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.14.1</version>
                        <configuration>
                            <release>${maven.compiler.release}</release>
                            <compilerArgs>
                                <arg>-h</arg>
                                <arg>${project.basedir}/src/native/include</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.9.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/jars</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>